add index query; add topic query

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -22,21 +22,25 @@
     img {
       @apply max-w-md h-auto;
     }
-
     pre code {
       @apply bg-slate-200 block w-full my-2;
     }
+    li > p {
+      @apply inline-block;
+    }
+    ul {
+      @apply list-disc;
+    }
+    ol {
+      @apply list-decimal list-inside;
+    }
+    blockquote {
+      @apply p-3 border-l-4 border-slate-300 bg-slate-200;
+    }
   }
-  li > p {
-    @apply inline-block;
-  }
-  ul {
-    @apply list-disc;
-  }
-  ol {
-    @apply list-decimal list-inside;
-  }
-  blockquote {
-    @apply p-3 border-l-4 border-slate-300 bg-slate-200;
+  .discourse-op {
+    p {
+      @apply my-2;
+    }
   }
 }
