memoize renderComments function

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -59,5 +59,8 @@
     aside blockquote {
       @apply w-full pl-6;
     }
+    pre[data-code-wrap] {
+      @apply border-cyan-300 border overflow-scroll max-h-96 p-2;
+    }
   }
 }
